--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = ""
   publish = "templates/"
-  command = "npm install && npm run build"
+  command = "echo 'Skipping build step'"
 
 [build.environment]
-  NODE_VERSION = "14"
+  NODE_VERSION = "18"
