--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "forex-trading-signals-frontend",
   "version": "1.0.0",
   "scripts": {
-    "build": "echo 'Copying templates to publish directory' && cp -r templates/* . && cp -r static/* ."
+    "build": "mkdir -p public && cp -r templates/* public/ && cp -r static/* public/"
   },
   "dependencies": {}
-}
+} 
