--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = ""
-  publish = "templates/"
-  command = "echo 'Skipping build step'"
+  publish = "public/"
+  command = "npm install && npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
